package messagepackage;
syntax = "proto3";

message ChatMessage {
    bytes payload = 1; // payload contains msg 
    string contentTopic = 2;
    uint32 version = 3;
    double timestamp = 4;
    RateLimitProof rate_limit_proof = 21;
}

message RateLimitProof {
    bytes proof = 1;
    bytes merkle_root = 2;
    bytes epoch = 3;
    bytes share_x = 4; // Poseidon hash of msg = (payload || contentTopic)
    bytes share_y = 5;
    bytes nullifier = 6;
}